[gd_scene load_steps=13 format=3 uid="uid://bsel1llx3hgte"]

[ext_resource type="Theme" uid="uid://c4ddkd8kjfn4h" path="res://scenes/ui/game_ui_themes.tres" id="1_17uwj"]
[ext_resource type="Script" uid="uid://d2csjvjd5060" path="res://scenes/ui/inventory_panel.gd" id="2_b11k6"]
[ext_resource type="Texture2D" uid="uid://c71j8kkwn3js0" path="res://assets/game/objects/basic_tools_and_meterials.png" id="2_cvy6a"]
[ext_resource type="Texture2D" uid="uid://ccm6of0o6fc63" path="res://assets/game/objects/basic_plants.png" id="3_cvy6a"]
[ext_resource type="Texture2D" uid="uid://hfmhm71ae4ei" path="res://assets/game/objects/egg_item.png" id="4_lcq1t"]
[ext_resource type="Texture2D" uid="uid://o2sn8hclaw3a" path="res://assets/game/objects/simple_milk_and_grass_item.png" id="5_b11k6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ta3uk"]
atlas = ExtResource("2_cvy6a")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17uwj"]
atlas = ExtResource("2_cvy6a")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcq1t"]
atlas = ExtResource("3_cvy6a")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b11k6"]
atlas = ExtResource("3_cvy6a")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvod"]
atlas = ExtResource("4_lcq1t")

[sub_resource type="AtlasTexture" id="AtlasTexture_4tgr1"]
atlas = ExtResource("5_b11k6")
region = Rect2(32, 0, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_17uwj")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_b11k6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_ta3uk")

[node name="LogsLabel" type="Label" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Stones" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Stones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_17uwj")

[node name="StonesLabel" type="Label" parent="MarginContainer/VBoxContainer/Stones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Corns" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Corns"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_lcq1t")

[node name="CornsLabel" type="Label" parent="MarginContainer/VBoxContainer/Corns"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Tomatoes" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Tomatoes"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_b11k6")

[node name="TomatoesLabel" type="Label" parent="MarginContainer/VBoxContainer/Tomatoes"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Eggs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Eggs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_tdvod")

[node name="EggsLabel" type="Label" parent="MarginContainer/VBoxContainer/Eggs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Milk" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_4tgr1")

[node name="MilkLabel" type="Label" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
